big improvements in navigtaion

--- a/src/app/components/masthead/masthead.component.html
+++ b/src/app/components/masthead/masthead.component.html
@@ -1,9 +1,9 @@
-<header class="masthead mb-n5">
+<header class="mt-masthead mb-n5">
   <div class="container">
-    <div class="row flex-column mb-3">
+    <div class="row mt-masthead-row gx-0 gx-lg-3 mb-3">
       <div class="col-10">
         <h1 class="heading">
-          I build the digital future of tomorrow
+          Building the digital future of tomorrow
           <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
         </h1>
       </div>
@@ -13,8 +13,6 @@
           de laatste technieken kan volbrengen.
         </p>
       </div>
-    </div>
-    <div class="row">
       <div class="col-12 col-lg-5">
         <div class="card mt-card">
           <div class="card-body">
