--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -44,6 +44,7 @@
 @import "root";
 @import "components/links";
 @import "components/buttons";
+@import "components/navbar";
 @import "components/masthead";
 @import "components/cards";
 @import "components/sections";
