--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -8,11 +8,9 @@
       </div>
       <div class="col-12 col-lg-8">
         <p class="text-quinary mb-10 mb-lg-0">Naast het ontwikkelen van websites in diverse mogelijkheden, ben ik ook
-          een webdesigner
-          in hart en nieren.
-          Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen, van het ontwerp van de website tot
-          het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel gebaseert ook wel component based
-          genoemt, dit om code in meerdere locaties of projecten te gebruiken.</p>
+          een webdesigner in hart en nieren. Bij elk project waar ik aan werk bemoei ik me graag met bijde onderdelen,
+          van het ontwerp van de website tot het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel
+          gebaseert ook wel component based genoemt, dit om code in meerdere locaties of projecten te gebruiken.</p>
       </div>
       <img class="mt-section__about-image" src="../assets/images/aboutme-cartoon.png" alt="aboutme-cartoon">
     </div>
