--- a/src/app/components/cta/cta.component.html
+++ b/src/app/components/cta/cta.component.html
@@ -2,13 +2,13 @@
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row flex-column">
       <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__cta-heading mb-5 text-center text-lg-left">Klaar voor jouw eigen unieke
+        <h2 class="display-5 mt-section__cta-heading mb-3 text-center text-lg-left">Klaar voor jouw eigen unieke
           website?
           <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
         </h2>
       </div>
       <div class="col-12 col-lg-8">
-        <p class="mb-4 text-center text-lg-left">Een sterke website begint met een goed gesprek. Daarom start ik altijd
+        <p class="mt-section__cta-content mb-5 text-center text-lg-left">Een sterke website begint met een goed gesprek. Daarom start ik altijd
           met een goed gesprek over
           jouw wensen.</p>
       </div>
