--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,40 +1,62 @@
 <footer class="mt-footer">
   <div class="container gx-5 gx-lg-1">
-    <div class="row gx-6 px-5 px-lg-1 pt-5 pb-3">
-      <div class="col text-center text-lg-left mb-5 mb-lg-0">
-        <h5>Duncan</h5>
+    <div class="row gx-0 gx-lg-6 px-3 px-lg-1 pt-5 pb-3 pb-lg-5">
+      <div class="col-auto col-lg-3 mb-5 mb-lg-0">
+        <mt-brand></mt-brand>
       </div>
-      <div class="col-auto">
+      <div class="col-12 col-lg-3">
         <ul class="mt-footer__nav">
-          <li>Contactgegevens</li>
-          <li><a href="mailto:hello@duncanheffron.com" title="Send me a mail!">hello@duncanheffron.com</a></li>
-          <li><a href="https://api.whatsapp.com/send?phone=+310630406388" target="_blank" title="Whatsapp me!">06-30406388</a>
-          </li>
+          <li>Producten & diensten</li>
+          <li><a href="#">Eenvoudige website</a></li>
+          <li><a href="#">Uitgebreide website</a></li>
+          <li class="mt-footer__nav-new"><a href="#">Shopify custom thema</a></li>
+          <li><a href="#">Digitaal ontwerp</a></li>
         </ul>
       </div>
-      <div class="col-auto">
+      <div class="col-12 col-lg-3">
         <ul class="mt-footer__nav">
-          <li>Links</li>
-          <li><a href="https://github.com/duncanheffron/mountain" target="_blank" title="Checkout my GitHub repo's">GitHub</a>
-          </li>
-          <li><a href="https://dribbble.com/duncanheffron" target="_blank"
-                 title="My Dribbble is full of amazing projects and inspiration">Dribbble</a></li>
-          <li><a href="https://www.instagram.com/duncan.developer/" target="_blank" title="Follow me on instagram?">Instagram</a>
-          </li>
-          <li><a href="https://www.linkedin.com/in/duncanschriel/" target="_blank"
-                 title="Linked In the place for the peeps who want to connect!">Linked In</a></li>
+          <li>Mijn portfolio</li>
+          <li><a href="#">ShareValue website</a></li>
+          <li><a href="#">PostPoint training</a></li>
+          <li><a href="#">Burgr. daily UI challenge</a></li>
+          <li><a href="#">Digital OV-Chipkaart</a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-lg-3">
+        <ul class="mt-footer__nav">
+          <li>Kom in contact</li>
+          <li><a href="https://goo.gl/maps/MtDRTYHZFByr8w3F6" target="_blank">Dwergbieslaan 66<br>3452 AK Vleuten</a></li>
+          <li><a href="mailto:hello@duncanheffron.com" title="Send me a mail!">hello@duncanheffron.com</a></li>
+          <li><a href="https://api.whatsapp.com/send?phone=+310630406388" target="_blank" title="Whatsapp me!">06-30406388</a></li>
         </ul>
       </div>
     </div>
-    <div class="row justify-content-center justify-content-lg-start py-3">
-      <div class="col-12 col-lg-auto text-center text-lg-left">
-        <p class="small">Build with<span class="d-inline-flex mx-1" style="width: 1.2rem;">❤️</span>by Duncan</p>
+    <div class="row pt-3 px-3 px-lg-1 small">
+      <div class="col-12 col-lg-auto mr-lg-auto">
+        <p class="text-quinary">Gebouwd met<span class="d-inline-flex ml-1" style="width: 1.2rem;">❤️</span>door Duncan</p>
       </div>
       <div class="col-auto">
-        <a href="#" class="small">Privacy</a>
+        <a href="#">Sitemap</a>
       </div>
       <div class="col-auto">
-        <a href="#" class="small">Contact</a>
+        <a href="#">Privacy</a>
+      </div>
+      <div class="col-auto">
+        <a href="#">Contact</a>
+      </div>
+    </div>
+    <div class="row pb-3 px-3 px-lg-1 small">
+      <div class="col-12 col-lg-auto mr-lg-auto">
+        <p class="mt-5 mt-lg-0 text-quinary small">© 2020 Duncan Heffron</p>
+      </div>
+      <div class="col-auto">
+        <span class="text-quinary small">KVK 12345678</span>
+      </div>
+      <div class="col-auto">
+        <span class="text-quinary small">BTW NL000000000B00</span>
+      </div>
+      <div class="col-auto">
+        <span class="text-quinary small">BANK NL39 KNAB 0502 3361 10</span>
       </div>
     </div>
   </div>
