--- a/src/app/components/travels/travels.component.html
+++ b/src/app/components/travels/travels.component.html
@@ -2,17 +2,16 @@
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row align-items-center">
       <div class="col-12 col-lg">
-        <h3 class="mb-3 mb-lg-0">Travels</h3>
+        <h3 class="mb-3 mb-lg-0">Reizen</h3>
       </div>
       <div class="col-12 col-lg-auto">
-        <a href="#" class="mt-link mt-link-lg text-dark">Bekijk al mijn travels</a>
+        <a href="#" class="mt-link mt-link-lg text-dark">Bekijk al mijn reizen</a>
       </div>
     </div>
     <div class="row">
       <div class="col-12 col-lg-7">
         <p class="mt-3 mt-lg-2 mb-4 text-quinary">Graag heb ik ooit de helewereld gezien. Dus ik deel graag mijn reizen
-          en de
-          verhalen.</p>
+          en de verhalen.</p>
       </div>
     </div>
     <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
