--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -10,20 +10,24 @@
     li {
       font-size: .875rem;
       margin-bottom: .5rem;
+      line-height: 1.75;
+      color: $quinary;
+      position: relative;
 
       &:first-child {
         font-size: 1rem;
         font-weight: $font-weight-semibold;
-      }
-
-      a {
+        margin-top: .5rem;
+        margin-bottom: .75rem;
         color: $dark;
-        text-decoration: none;
-        transition: color .2s ease;
+      }
+    }
 
-        &:hover {
-          color: $primary;
-        }
+    &-new {
+      &::after {
+        content: "nieuw";
+        position: absolute;
+        font-size: .5rem;
       }
     }
   }
