--- a/src/assets/scss/components/_masthead.scss
+++ b/src/assets/scss/components/_masthead.scss
@@ -1,7 +1,6 @@
-.masthead {
+.mt-masthead {
   $self: &;
-  height: 75vh;
-  max-height: 75vh;
+  height: auto;
   background-image: url("~src/assets/images/hero/primary-hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -19,58 +18,68 @@
     justify-content: flex-end;
     position: relative;
 
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      left: 0;
-      bottom: 3rem;
-      width: 100%;
-      height: 80%;
-      z-index: 0;
-      background-color: $white;
-      border-radius: .9375rem .9375rem 0 0;
-      @include mt-box-shadow();
+    #{$self}-row {
+      margin-top: 3.5rem;
+      padding-top: 1.5rem;
 
       @include media-breakpoint-up(lg) {
-        left: -2rem;
+        margin-top: 0;
+        padding-top: 0;
+      }
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
         bottom: 3rem;
-        width: 90%;
-        height: 80%;
-      }
-    }
+        width: 100%;
+        height: calc(100% - 6.5rem);
+        z-index: 0;
+        background-color: $white;
+        border-radius: .9375rem .9375rem 0 0;
+        @include mt-box-shadow();
 
-    .heading {
-      position: relative;
-      font-size: 2.25rem;
-      font-weight: $font-weight-bold;
-
-      @include media-breakpoint-up(lg) {
-        font-size: 4.5rem;
-      }
-
-      @include media-breakpoint-down(md) {
-        padding-right: 1rem;
-        padding-left: 1rem;
-
-        &::after {
-          right: 1.5rem;
+        @include media-breakpoint-up(lg) {
+          left: -2rem;
+          bottom: 3rem;
+          width: 90%;
+          height: 80%;
         }
       }
-    }
 
-    .introduction {
-      color: $quinary;
-      font-size: 1.125rem;
-      position: relative;
+      .heading {
+        position: relative;
+        font-size: 2.25rem;
+        font-weight: $font-weight-bold;
 
-      @include media-breakpoint-up(lg) {
-        max-width: 52%;
+        @include media-breakpoint-up(lg) {
+          font-size: 4.5rem;
+        }
+
+        @include media-breakpoint-down(md) {
+          padding-right: 1rem;
+          padding-left: 1rem;
+
+          &::after {
+            right: 1.5rem;
+          }
+        }
       }
 
-      @include media-breakpoint-down(md) {
-        padding-right: 1rem;
-        padding-left: 1rem;
+      .introduction {
+        color: $quinary;
+        font-size: 1.125rem;
+        position: relative;
+
+        @include media-breakpoint-up(lg) {
+          max-width: 52%;
+        }
+
+        @include media-breakpoint-down(md) {
+          padding-right: 1rem;
+          padding-left: 1rem;
+        }
       }
     }
   }
