#21 #17 #16 #11 Upgraded components and folder structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <mt-navbar></mt-navbar>
-<mt-masthead></mt-masthead>
-<mt-experience></mt-experience>
-<mt-cases></mt-cases>
-<mt-travels></mt-travels>
-<mt-about></mt-about>
+<router-outlet></router-outlet>
 <mt-cta></mt-cta>
 <mt-footer></mt-footer>
