--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -21,5 +21,11 @@
         right: 1.25rem;
       }
     }
+
+    &.btn-primary {
+      &::after {
+        content: url("~src/assets/images/arrow-right-sm-dark.svg");
+      }
+    }
   }
 }
