Issue resolved with to about components

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -9,7 +9,7 @@
           <li>Producten & diensten</li>
           <li><a href="#">Eenvoudige website</a></li>
           <li><a href="#">Uitgebreide website</a></li>
-          <li class="mt-footer__nav-new"><a href="#">Shopify custom thema</a></li>
+          <li class="mt-footer__nav-new"><a href="#">Shopify API</a></li>
           <li><a href="#">Digitaal ontwerp</a></li>
         </ul>
       </div>
