--- a/src/app/modules/index/index.component.html
+++ b/src/app/modules/index/index.component.html
@@ -2,4 +2,4 @@
 <mt-experience-row></mt-experience-row>
 <mt-case-row></mt-case-row>
 <mt-trip-row></mt-trip-row>
-<mt-about></mt-about>
+<mt-about-cta></mt-about-cta>
