Changed case card colors + created pages for experience and trips

--- a/src/app/core/cta/cta.component.html
+++ b/src/app/core/cta/cta.component.html
@@ -12,7 +12,7 @@
           Hoor graag wat jouw wensen zijn, om samen te kijken naar de mogelijkheden.</p>
       </div>
       <div class="col-auto text-center text-lg-left">
-        <a href="#" class="btn btn-tertiary rounded-pill mt-button--arrow mb-6 mb-lg-0">
+        <a routerLink="contact" class="btn btn-tertiary rounded-pill mt-button--arrow mb-6 mb-lg-0">
           Kom in contact
         </a>
       </div>
