--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -42,7 +42,7 @@
         <a href="#">Privacy</a>
       </div>
       <div class="col-auto">
-        <a href="#">Contact</a>
+        <a routerLink="contact">Contact</a>
       </div>
     </div>
     <div class="row pb-3 px-3 px-lg-1 small">
