--- a/src/app/modules/index/components/case-row/case-row.component.html
+++ b/src/app/modules/index/components/case-row/case-row.component.html
@@ -17,9 +17,9 @@
     </div>
     <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
       <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
+        <div class="card">
           <div class="card-body">
-            <mt-sharevalue class="mt-section__col-brand" fillColor="currentColor"></mt-sharevalue>
+            <mt-sharevalue class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-sharevalue>
             <div class="mt-section__col-copy">
               <h5 class="mt-section__col-heading">ShareValue</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
@@ -32,9 +32,9 @@
         </div>
       </div>
       <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
+        <div class="card">
           <div class="card-body">
-            <mt-postnl class="mt-section__col-brand" fillColor="currentColor"></mt-postnl>
+            <mt-postnl class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-postnl>
             <div class="mt-section__col-copy">
               <h5 class="mt-section__col-heading">PostPoint Training</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
@@ -47,9 +47,9 @@
         </div>
       </div>
       <div class="mt-section__col col">
-        <div class="card bg-primary text-white">
+        <div class="card">
           <div class="card-body">
-            <mt-burger class="mt-section__col-brand" fillColor="currentColor"></mt-burger>
+            <mt-burger class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-burger>
             <div class="mt-section__col-copy">
               <h5 class="mt-section__col-heading">BURGR.</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
