--- a/src/app/modules/index/components/trip-row/trip-row.component.html
+++ b/src/app/modules/index/components/trip-row/trip-row.component.html
@@ -5,7 +5,7 @@
         <h3 class="mb-3 mb-lg-0">Reizen</h3>
       </div>
       <div class="col-12 col-lg-auto">
-        <a href="#" class="mt-link mt-link-lg text-dark">Bekijk al mijn reizen</a>
+        <a routerLink="trip" class="mt-link mt-link-lg text-dark">Bekijk al mijn reizen</a>
       </div>
     </div>
     <div class="row">
