--- a/src/app/modules/index/components/experience-row/experience-row.component.html
+++ b/src/app/modules/index/components/experience-row/experience-row.component.html
@@ -5,7 +5,7 @@
         <h3 class="mb-3 mb-lg-0">Meest relevante ervaringen</h3>
       </div>
       <div class="col-12 col-lg-auto">
-        <a routerLink="experience" class="mt-link mt-link-lg text-white">Bekijk al mijn ervaringen</a>
+        <a routerLink="experiences" class="mt-link mt-link-lg text-white">Bekijk al mijn ervaringen</a>
       </div>
     </div>
     <div class="row row-cols-1 row-cols-lg-3 mt-3 mt-lg-5 gx-lg-6 gy-4 gy-lg-0">
