Fixed issues in bootstrap upgrade and altered a couple of styles

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar mt-navbar navbar-expand-lg navbar-light sticky-top bg-white shadow-sm">
   <div class="container px-3 px-lg-1">
-    <a class="navbar-brand font-weight-bold" routerLink="/" (click)="closeMenu()"><mt-brand></mt-brand></a>
+    <a class="navbar-brand fw-bold" routerLink="/" (click)="closeMenu()"><mt-brand></mt-brand></a>
     <div class="mt-navbar-nav mr-2 mr-lg-0">
       <div class="mt-navbar-icon" [ngClass]="collapsed ? 'open' : ''" (click)="toggleMenu()">
         <span></span>
