--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -18,8 +18,9 @@
       <div class="col-auto">
         <h3>Sociale media</h3>
         <ul class="list-unstyled">
-          <li><a href="#">@duncan.developer</a></li>
-          <li><a href="#">@duncan.heffron</a></li>
+          <li><a href="#">Follow my Instagram</a></li>
+          <li><a href="#">Connect on Linked In</a></li>
+          <li><a href="#">Checkout my Dribbble</a></li>
         </ul>
       </div>
     </div>
@@ -62,5 +63,10 @@
         </form>
       </div>
     </div>
+  </div>
+</section>
+<section class="my-7">
+  <div class="container text-center">
+    <h3 class="display-1 fw-bold">Maps</h3>
   </div>
 </section>
