--- a/src/app/modules/index/components/masthead/masthead.component.html
+++ b/src/app/modules/index/components/masthead/masthead.component.html
@@ -19,7 +19,7 @@
             <a href="#" class="mt-card--link bg-primary text-white">Lees meer</a>
             <div class="mt-card--content">
               <h5 class="mt-card--heading">Eenvoudige website <span
-                class="font-weight-normal text-primary">op maat</span></h5>
+                class="fw-normal text-primary">op maat</span></h5>
               <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb
                 ik ook gewerk.</p>
             </div>
@@ -32,7 +32,7 @@
             <a href="#" class="mt-card--link bg-secondary text-white">Lees meer</a>
             <div class="mt-card--content">
               <h5 class="mt-card--heading">Uitgebreide website <span
-                class="font-weight-normal text-secondary">op maat</span></h5>
+                class="fw-normal text-secondary">op maat</span></h5>
               <p class="mt-card--body">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb
                 ik ook gewerk.</p>
             </div>
