--- a/src/app/core/cta/cta.component.html
+++ b/src/app/core/cta/cta.component.html
@@ -1,8 +1,8 @@
 <section class="mt-section mt-section__cta">
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row flex-column">
-      <div class="col-12 col-lg-8">
-        <h2 class="display-5 mt-section__cta-heading mb-3 text-center text-lg-left">Klaar voor jouw eigen unieke
+      <div class="col-12 col-lg-7">
+        <h2 class="mt-section__cta-heading mb-3 text-center text-lg-left">Klaar voor jouw eigen unieke
           website?
           <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
         </h2>
@@ -20,3 +20,4 @@
     </div>
   </div>
 </section>
+
