--- a/src/app/modules/index/components/trip-row/trip-row.component.html
+++ b/src/app/modules/index/components/trip-row/trip-row.component.html
@@ -1,4 +1,4 @@
-<section class="mt-section bg-quaternary">
+<section class="mt-section bg-light">
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row align-items-center">
       <div class="col-12 col-lg">
