--- a/src/assets/scss/components/_sections.scss
+++ b/src/assets/scss/components/_sections.scss
@@ -78,6 +78,8 @@
 
       #{$self}__about-heading {
         position: relative;
+        font-weight: $font-weight-bold;
+        font-size: 2.5rem;
       }
 
       #{$self}__about-image {
@@ -113,6 +115,8 @@
 
       #{$self}__cta-heading {
         position: relative;
+        font-weight: $font-weight-bold;
+        font-size: 2.5rem;
       }
 
       #{$self}__cta-content {
