case detial started and cases list added styles

--- a/src/app/modules/index/components/case-row/case-row.component.html
+++ b/src/app/modules/index/components/case-row/case-row.component.html
@@ -27,7 +27,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
+            <a routerLink="/case/sharevalue" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
@@ -36,13 +36,13 @@
           <div class="card-body">
             <mt-postnl class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-postnl>
             <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">PostPoint Training</h5>
+              <h5 class="mt-section__col-heading">PostNL training app</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
                 daarnaast heb ik ook gewerkt in het interne</p>
             </div>
           </div>
           <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
+            <a routerLink="/case/postnl-training-app" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <a class="mt-link text-tertiary mt-section__col-link" href="#">Bekijk meer van de case</a>
+            <a routerLink="/case/burgr" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
