--- a/src/app/modules/index/components/masthead/masthead.component.html
+++ b/src/app/modules/index/components/masthead/masthead.component.html
@@ -4,7 +4,7 @@
       <div class="col-10">
         <h1 class="heading">
           Building the digital future of tomorrow
-          <mt-brand-shape class="text-primary" fillColor="currentColor"></mt-brand-shape>
+          <mt-brand-shape></mt-brand-shape>
         </h1>
       </div>
       <div class="col-12">
