--- a/src/assets/scss/application.scss
+++ b/src/assets/scss/application.scss
@@ -46,6 +46,8 @@
 @import "components/buttons";
 @import "components/navbar";
 @import "components/masthead";
+@import "components/hero";
+@import "components/breadcrumb";
 @import "components/cards";
 @import "components/sections";
 @import "components/footer";
