--- a/src/app/core/hero/hero.component.html
+++ b/src/app/core/hero/hero.component.html
@@ -1,11 +1,18 @@
-<header style="background-image: url({{ image }});background-size: cover;">
-  <div class="container py-5 text-white">
-    <h1 class="display-1">{{ title }}</h1>
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Contact</li>
-      </ol>
-    </nav>
+<header class="mt-hero" style="background-image: url({{ image }});background-size: cover;">
+  <div class="container">
+    <div class="row">
+      <div class="mt-hero-content col-12 col-lg-auto">
+        <h1 class="display-2">
+          {{ title }}
+          <mt-brand-shape></mt-brand-shape>
+        </h1>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb px-0">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Contact</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
   </div>
 </header>
