--- a/src/assets/scss/components/_sections.scss
+++ b/src/assets/scss/components/_sections.scss
@@ -141,4 +141,43 @@
       }
     }
   }
+
+  &__case {
+    &-tag {
+      font-size: .875rem;
+      font-weight: $font-weight-light;
+      text-transform: uppercase;
+      color: $primary;
+      margin-bottom: .5rem;
+    }
+
+    &-heading {
+      align-self: flex-start;
+      margin-bottom: 1rem;
+      position: relative;
+
+      h2 {
+        color: $dark;
+        font-size: 2.625rem;
+        font-weight: $font-weight-bold;
+        position: relative;
+        z-index: 1;
+      }
+
+      span {
+        position: absolute;
+        display: inline-block;
+        width: 100%;
+        height: .75rem;
+        left: 2rem;
+        bottom: .75rem;
+        z-index: 0;
+      }
+    }
+
+    &-content {
+      color: $quinary;
+      margin-bottom: 1.75rem;
+    }
+  }
 }
