Upgraded cases overview

--- a/src/app/modules/index/components/case-row/case-row.component.html
+++ b/src/app/modules/index/components/case-row/case-row.component.html
@@ -18,8 +18,8 @@
     <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
       <div class="mt-section__col col">
         <div class="card">
+          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/sharevalue-frontend.png" alt="random" style="background-color: #FFE3CC;">
           <div class="card-body">
-            <mt-sharevalue class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-sharevalue>
             <div class="mt-section__col-copy">
               <h5 class="mt-section__col-heading">ShareValue</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
@@ -33,23 +33,8 @@
       </div>
       <div class="mt-section__col col">
         <div class="card">
+          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/burger-webdesign.png" alt="random" style="background-color: #FFE9A2;">
           <div class="card-body">
-            <mt-postnl class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-postnl>
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">PostNL training app</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a routerLink="/case/postnl-training-app" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card">
-          <div class="card-body">
-            <mt-burger class="mt-section__col-brand text-primary" fillColor="currentColor"></mt-burger>
             <div class="mt-section__col-copy">
               <h5 class="mt-section__col-heading">BURGR.</h5>
               <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
@@ -58,6 +43,21 @@
           </div>
           <div class="card-footer">
             <a routerLink="/case/burgr" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
+          </div>
+        </div>
+      </div>
+      <div class="mt-section__col col">
+        <div class="card">
+          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/chaty-webdesign.png" alt="random" style="background-color: #F1F5FF;">
+          <div class="card-body">
+            <div class="mt-section__col-copy">
+              <h5 class="mt-section__col-heading">Chaty</h5>
+              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
+                daarnaast heb ik ook gewerkt in het interne</p>
+            </div>
+          </div>
+          <div class="card-footer">
+            <a routerLink="/case/chaty" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
