--- a/src/app/modules/index/components/masthead/masthead.component.html
+++ b/src/app/modules/index/components/masthead/masthead.component.html
@@ -13,7 +13,7 @@
           de laatste technieken kan volbrengen.
         </p>
       </div>
-      <div class="col-12 col-lg-5">
+      <div class="col-12 col-lg-5 col-xl-4">
         <div class="card mt-card">
           <div class="card-body">
             <a href="#" class="mt-card--link bg-primary text-white">Lees meer</a>
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-5 d-none d-lg-flex">
+      <div class="col-12 col-lg-5 col-xl-4 d-none d-lg-flex">
         <div class="card mt-card">
           <div class="card-body">
             <a href="#" class="mt-card--link bg-secondary text-white">Lees meer</a>
