--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="mt-footer">
   <div class="container gx-5 gx-lg-1">
-    <div class="row gx-0 gx-lg-6 px-3 px-lg-1 pt-5 pb-3 pb-lg-5">
+    <div class="row gx-0 gx-lg-6 pt-5 pb-3 pb-lg-5">
       <div class="col-auto col-lg-3 mb-5 mb-lg-0">
         <mt-brand></mt-brand>
       </div>
@@ -31,7 +31,7 @@
         </ul>
       </div>
     </div>
-    <div class="row pt-3 px-3 px-lg-1 small">
+    <div class="row pt-3 small">
       <div class="col-12 col-lg-auto mr-lg-auto">
         <p class="text-quinary">Gebouwd met <mt-heart-shape></mt-heart-shape> door Duncan</p>
       </div>
@@ -45,7 +45,7 @@
         <a routerLink="contact">Contact</a>
       </div>
     </div>
-    <div class="row pb-3 px-3 px-lg-1 small">
+    <div class="row pb-3 small">
       <div class="col-12 col-lg-auto mr-lg-auto">
         <p class="mt-5 mt-lg-0 text-quinary small">© 2020 Duncan Heffron</p>
       </div>
