--- a/src/app/core/hero/hero.component.html
+++ b/src/app/core/hero/hero.component.html
@@ -1,7 +1,8 @@
-<header class="mt-hero" style="background-image: url({{ image }});background-size: cover;">
-  <div class="container">
+<!--<header class="mt-hero" style="background-image: url({{ image }});background-size: cover;">-->
+<header class="mt-hero">
+  <div class="container gx-5 gx-lg-1">
     <div class="row">
-      <div class="mt-hero-content col-12 col-lg-auto">
+      <div class="mt-hero-content col-10 col-lg-auto">
         <h1 class="display-2">
           {{ title }}
           <mt-brand-shape></mt-brand-shape>
