--- a/src/app/modules/cases/cases.component.html
+++ b/src/app/modules/cases/cases.component.html
@@ -1,11 +1,11 @@
 <mt-hero title="Portfolio" image="../assets/images/hero/primary-hero.jpg"></mt-hero>
-<section class="mt-section__case py-8">
-  <div class="container">
+<section class="mt-section__case">
+  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
     <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 order-lg-last">
-        <img src="../assets/images/projects/burger-webdesign.png" alt="random" style="max-height: 550px;width: 150%;object-fit: contain;">
+      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
+        <img src="../assets/images/projects/sharevalue-frontend.png" alt="random">
       </div>
-      <div class="col-12 col-lg-7 px-5 d-flex flex-column justify-content-center text-center text-lg-left">
+      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
         <span class="mt-section__case-tag">Frontend</span>
         <div class="mt-section__case-heading">
           <h2>ShareValue</h2>
@@ -17,13 +17,13 @@
     </div>
   </div>
 </section>
-<section class="mt-section__case py-8 bg-light">
-  <div class="container">
+<section class="mt-section__case">
+  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
     <div class="row gy-5 gy-lg-0">
       <div class="col-12 col-lg-4">
-        <img src="../assets/images/projects/burger-webdesign.png" alt="random" style="max-height: 550px;width: 150%;object-fit: contain;transform: translateX(-25%);">
+        <img src="../assets/images/projects/burger-webdesign.png" alt="random">
       </div>
-      <div class="col-12 col-lg-7 offset-lg-1 px-5 d-flex flex-column justify-content-center text-center text-lg-left">
+      <div class="col-12 col-lg-6 offset-lg-1 offset-xxl-2 d-flex flex-column justify-content-center text-center text-lg-left">
         <span class="mt-section__case-tag">Web design</span>
         <div class="mt-section__case-heading">
           <h2>Burgr.</h2>
@@ -35,13 +35,13 @@
     </div>
   </div>
 </section>
-<section class="mt-section__case py-8">
-  <div class="container">
+<section class="mt-section__case">
+  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
     <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 order-lg-last">
-        <img src="../assets/images/projects/chaty-webdesign.png" alt="random" style="max-height: 550px;width: 150%;object-fit: contain;">
+      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
+        <img src="../assets/images/projects/chaty-webdesign.png" alt="random">
       </div>
-      <div class="col-12 col-lg-7 px-5 d-flex flex-column justify-content-center text-center text-lg-left">
+      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
         <span class="mt-section__case-tag">Web design</span>
         <div class="mt-section__case-heading">
           <h2>Chaty</h2>
@@ -53,13 +53,13 @@
     </div>
   </div>
 </section>
-<section class="mt-section__case py-8 bg-light">
-  <div class="container">
+<section class="mt-section__case">
+  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
     <div class="row gy-5 gy-lg-0">
       <div class="col-12 col-lg-4">
-        <img src="../assets/images/projects/chipcard-appdesign.png" alt="random" style="max-height: 550px;width: 150%;object-fit: contain;transform: translateX(-25%);">
+        <img src="../assets/images/projects/postnl-appdesign.png" alt="random">
       </div>
-      <div class="col-12 col-lg-7 offset-lg-1 px-5 d-flex flex-column justify-content-center text-center text-lg-left">
+      <div class="col-12 col-lg-6 offset-lg-1 offset-xxl-2 d-flex flex-column justify-content-center text-center text-lg-left">
         <span class="mt-section__case-tag">App design</span>
         <div class="mt-section__case-heading">
           <h2>PostNL training app</h2>
@@ -71,13 +71,13 @@
     </div>
   </div>
 </section>
-<section class="mt-section__case py-8">
-  <div class="container">
+<section class="mt-section__case">
+  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
     <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 order-lg-last">
-        <img src="../assets/images/projects/chipcard-appdesign.png" alt="random" style="max-height: 550px;width: 150%;object-fit: contain;">
+      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
+        <img src="../assets/images/projects/chipcard-appdesign.png" alt="random">
       </div>
-      <div class="col-12 col-lg-7 px-5 d-flex flex-column justify-content-center text-center text-lg-left">
+      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
         <span class="mt-section__case-tag">App design</span>
         <div class="mt-section__case-heading">
           <h2>OV-Chipkaart app</h2>
