--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -1,6 +1,6 @@
 <mt-hero title="Contact" image="../assets/images/hero/primary-hero.jpg"></mt-hero>
 <section>
-  <div class="container gx-5 g-xlg-1 py-6">
+  <div class="container gx-5 gx-lg-1 py-6">
     <div class="row justify-content-between">
       <div class="col-auto">
         <h3>Kom in contact</h3>
@@ -39,17 +39,21 @@
       <div class="col-12 col-lg-6">
         <form>
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="email" class="form-control" id="floatingInputName" placeholder="Jane Doe">
+            <label for="floatingInputName">Naam</label>
           </div>
           <div class="form-floating mb-3">
-            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+            <input type="email" class="form-control" id="floatingInputEmail" placeholder="name@example.com">
+            <label for="floatingInputEmail">Email addres</label>
+          </div>
+          <div class="form-floating mb-3">
+            <select class="form-select" id="floatingSelectOption" aria-label="Floating label select example">
               <option selected>Open this select menu</option>
               <option value="1">One</option>
               <option value="2">Two</option>
               <option value="3">Three</option>
             </select>
-            <label for="floatingSelect">Works with selects</label>
+            <label for="floatingSelectOption">Banana</label>
           </div>
           <div class="form-floating mb-3">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
