--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -331,7 +331,8 @@ $grid-breakpoints: (
 $container-max-widths: (
   sm: 540px,
   md: 720px,
-  lg: 960px
+  lg: 960px,
+  xl: 1140px
 ) !default;
 // scss-docs-end container-max-widths
 
