--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -3,12 +3,7 @@
 
   &-content {
     margin-top: 3rem;
-    padding: 1.5rem 1rem .5rem;
-    position: relative;
-
-    @include media-breakpoint-up(lg) {
-      padding: 2rem 1rem 1rem;
-    }
+    margin-bottom: 2rem;
 
     h1 {
       font-weight: $font-weight-bold;
@@ -17,27 +12,6 @@
     h1, .breadcrumb {
       position: relative;
       z-index: 1;
-    }
-
-    &::before {
-      content: "";
-      display: block;
-      position: absolute;
-      z-index: 0;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 100%;
-      background-color: $white;
-      border-radius: .9375rem .9375rem 0 0;
-      @include mt-box-shadow();
-
-      @include media-breakpoint-up(lg) {
-        left: -5%;
-        bottom: 0;
-        width: 110%;
-        height: 100%;
-      }
     }
   }
 }
