--- a/src/assets/scss/components/_sections.scss
+++ b/src/assets/scss/components/_sections.scss
@@ -18,12 +18,9 @@
     }
 
     &-brand {
-      svg {
-        max-width: 100%;
-        max-height: 6.75rem;
-        padding: 1rem 2rem;
-        margin-bottom: 2rem;
-      }
+      height: 300px;
+      object-fit: contain;
+      padding: 2rem;
     }
 
     &-heading {
@@ -143,6 +140,29 @@
   }
 
   &__case {
+    &:nth-child(even) {
+      background-color: $light;
+
+      img {
+        @include media-breakpoint-up(lg) {
+          left: 0;
+        }
+      }
+    }
+
+    img {
+      width: 80%;
+      left: 50%;
+      position: relative;
+      transform: translateX(-50%);
+
+      @include media-breakpoint-up(lg) {
+        width: 200%;
+        left: -100%;
+        transform: translateX(0);
+      }
+    }
+
     &-tag {
       font-size: .875rem;
       font-weight: $font-weight-light;
@@ -155,23 +175,38 @@
       align-self: flex-start;
       margin-bottom: 1rem;
       position: relative;
+      align-self: center;
+
+      @include media-breakpoint-up(lg) {
+        align-self: flex-start;
+      }
 
       h2 {
         color: $dark;
-        font-size: 2.625rem;
+        font-size: 1.25rem;
         font-weight: $font-weight-bold;
         position: relative;
         z-index: 1;
+
+        @include media-breakpoint-up(lg) {
+          font-size: 2.625rem;
+        }
       }
 
       span {
         position: absolute;
         display: inline-block;
         width: 100%;
-        height: .75rem;
-        left: 2rem;
-        bottom: .75rem;
+        height: .5rem;
+        left: 1rem;
+        bottom: .5rem;
         z-index: 0;
+
+        @include media-breakpoint-up(lg) {
+          height: .75rem;
+          left: 2rem;
+          bottom: .75rem;
+        }
       }
     }
 
