--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,6 +1,6 @@
-<mt-hero title="Wie ben ik" image="../assets/images/hero/primary-hero.jpg"></mt-hero>
+<mt-hero title="Wie ben ik"></mt-hero>
 <section class="mt-section mt-section__about">
-  <div class="container gx-5 gx-lg-1 py-6">
+  <div class="container gx-5 gx-lg-1 py-8">
     <div class="row flex-column">
       <div class="col-12 col-lg-8">
         <h2 class="display-5 mt-section__about-heading mb-5">Duncan, de gedreven front-end developer uit Utrecht
@@ -13,7 +13,7 @@
           van het ontwerp van de website tot het bouwen in de front-end. Mijn code schrijf ik altijd op onderdeel
           gebaseert ook wel component based genoemt, dit om code in meerdere locaties of projecten te gebruiken.</p>
       </div>
-      <img class="mt-section__about-image" src="../assets/images/aboutme-cartoon.png" alt="aboutme-cartoon">
+      <img class="mt-section__about-image" src="../assets/images/aboutme-cartoon-christmas.png" alt="aboutme-cartoon">
     </div>
   </div>
 </section>
