--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -1,4 +1,4 @@
-<mt-hero title="Contact" image="../assets/images/hero/primary-hero.jpg"></mt-hero>
+<mt-hero title="Contact"></mt-hero>
 <section>
   <div class="container gx-5 gx-lg-1 py-6">
     <div class="row justify-content-between">
