--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar mt-navbar navbar-expand-lg navbar-light sticky-top bg-white shadow-sm">
+<nav class="navbar mt-navbar navbar-expand-lg navbar-light sticky-top bg-white">
   <div class="container px-3 px-lg-1">
-    <a class="navbar-brand fw-bold" routerLink="/" (click)="closeMenu()"><mt-brand></mt-brand></a>
+    <a class="navbar-brand fw-bold" routerLink="/" (click)="closeMenu()" title="Back to start"><mt-brand></mt-brand></a>
     <div class="mt-navbar-nav mr-2 mr-lg-0">
       <div class="mt-navbar-icon" [ngClass]="collapsed ? 'open' : ''" (click)="toggleMenu()">
         <span></span>
@@ -12,7 +12,7 @@
           <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link d-lg-none" (click)="closeMenu()">home</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/cases" routerLinkActive="active" class="nav-link" (click)="closeMenu()">portfolio</a>
+          <a routerLink="/projects" routerLinkActive="active" class="nav-link" (click)="closeMenu()">portfolio</a>
         </li>
         <li class="nav-item">
           <a routerLink="/about" routerLinkActive="active" class="nav-link" (click)="closeMenu()">wie ben ik</a>
