--- a/src/app/modules/cases/cases.component.html
+++ b/src/app/modules/cases/cases.component.html
@@ -1,92 +1,1 @@
-<mt-hero title="Portfolio" image="../assets/images/hero/primary-hero.jpg"></mt-hero>
-<section class="mt-section__case">
-  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
-    <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
-        <img src="../assets/images/projects/sharevalue-frontend.png" alt="random">
-      </div>
-      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
-        <span class="mt-section__case-tag">Frontend</span>
-        <div class="mt-section__case-heading">
-          <h2>ShareValue</h2>
-          <span style="background-color: #F47B20;"></span>
-        </div>
-        <p class="mt-section__case-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne</p>
-        <a routerLink="/case/sharevalue" class="btn btn-tertiary rounded-pill mt-button--arrow align-self-center align-self-lg-start">Bekijk de case</a>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section__case">
-  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
-    <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4">
-        <img src="../assets/images/projects/burger-webdesign.png" alt="random">
-      </div>
-      <div class="col-12 col-lg-6 offset-lg-1 offset-xxl-2 d-flex flex-column justify-content-center text-center text-lg-left">
-        <span class="mt-section__case-tag">Web design</span>
-        <div class="mt-section__case-heading">
-          <h2>Burgr.</h2>
-          <span style="background-color: #F6CF3E;"></span>
-        </div>
-        <p class="mt-section__case-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne</p>
-        <a routerLink="/case/burgr" class="btn btn-tertiary rounded-pill mt-button--arrow align-self-center align-self-lg-start">Bekijk de case</a>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section__case">
-  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
-    <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
-        <img src="../assets/images/projects/chaty-webdesign.png" alt="random">
-      </div>
-      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
-        <span class="mt-section__case-tag">Web design</span>
-        <div class="mt-section__case-heading">
-          <h2>Chaty</h2>
-          <span style="background-color: #245FF9;"></span>
-        </div>
-        <p class="mt-section__case-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne</p>
-        <a routerLink="/case/chaty" class="btn btn-tertiary rounded-pill mt-button--arrow align-self-center align-self-lg-start">Bekijk de case</a>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section__case">
-  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
-    <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4">
-        <img src="../assets/images/projects/postnl-appdesign.png" alt="random">
-      </div>
-      <div class="col-12 col-lg-6 offset-lg-1 offset-xxl-2 d-flex flex-column justify-content-center text-center text-lg-left">
-        <span class="mt-section__case-tag">App design</span>
-        <div class="mt-section__case-heading">
-          <h2>PostNL training app</h2>
-          <span style="background-color: #ED8C00;"></span>
-        </div>
-        <p class="mt-section__case-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne</p>
-        <a routerLink="/case/postnl-training-app" class="btn btn-tertiary rounded-pill mt-button--arrow align-self-center align-self-lg-start">Bekijk de case</a>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="mt-section__case">
-  <div class="container gx-5 gx-lg-1 py-5 py-lg-8">
-    <div class="row gy-5 gy-lg-0">
-      <div class="col-12 col-lg-4 offset-lg-1 offset-xxl-2 order-lg-last">
-        <img src="../assets/images/projects/chipcard-appdesign.png" alt="random">
-      </div>
-      <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-left">
-        <span class="mt-section__case-tag">App design</span>
-        <div class="mt-section__case-heading">
-          <h2>OV-Chipkaart app</h2>
-          <span style="background-color: #FF0198;"></span>
-        </div>
-        <p class="mt-section__case-content">Bij ShareValue werk ik in de detachering als front-end developer, daarnaast heb ik ook gewerkt in het interne</p>
-        <a routerLink="/case/ov-chipkaart-app" class="btn btn-tertiary rounded-pill mt-button--arrow align-self-center align-self-lg-start">Bekijk de case</a>
-      </div>
-    </div>
-  </div>
-</section>
-
+<router-outlet></router-outlet>
