--- a/src/app/modules/index/components/case-row/case-row.component.html
+++ b/src/app/modules/index/components/case-row/case-row.component.html
@@ -5,59 +5,27 @@
         <h3 class="mb-3 mb-lg-0">Portfolio</h3>
       </div>
       <div class="col-12 col-lg-auto">
-        <a routerLink="/cases" class="mt-link mt-link-lg text-dark">Bekijk al mijn cases</a>
+        <a routerLink="/projects" class="mt-link mt-link-lg text-dark">Bekijk al mijn cases</a>
       </div>
     </div>
     <div class="row">
       <div class="col-12 col-lg-7">
         <p class="mt-3 mt-lg-3 mb-4 text-quinary">Projecten waar ik trots op ben. Gemaakt met passie en op basis van de
-          wensen
-          en laatste trends.</p>
+          wensen en laatste trends.</p>
       </div>
     </div>
-    <div class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
-      <div class="mt-section__col col">
+    <div *ngIf="data" class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
+      <div *ngFor="let project of data.projects | slice:0:3;" class="mt-section__col col">
         <div class="card">
-          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/sharevalue-frontend.png" alt="random" style="background-color: #FFE3CC;">
+          <img class="mt-section__col-brand img-fluid" src="{{ project.thumbnail.url }}" alt="random" [style]="{ 'background-color' : project.company.secondaryColor }">
           <div class="card-body">
             <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">ShareValue</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
+              <h5 class="mt-section__col-heading">{{ project.name }}</h5>
+              <p class="mt-section__col-content">{{ project.excerpt }}</p>
             </div>
           </div>
           <div class="card-footer">
-            <a routerLink="/case/sharevalue" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card">
-          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/burger-webdesign.png" alt="random" style="background-color: #FFE9A2;">
-          <div class="card-body">
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">BURGR.</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a routerLink="/case/burgr" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
-      <div class="mt-section__col col">
-        <div class="card">
-          <img class="mt-section__col-brand img-fluid" src="../assets/images/projects/chaty-webdesign.png" alt="random" style="background-color: #F1F5FF;">
-          <div class="card-body">
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">Chaty</h5>
-              <p class="mt-section__col-content">Bij ShareValue werk ik in de detachering als front-end developer,
-                daarnaast heb ik ook gewerkt in het interne</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a routerLink="/case/chaty" class="mt-link text-tertiary mt-section__col-link">Bekijk meer van de case</a>
+            <a routerLink="/projects/{{ project.slug }}" class="mt-link text-tertiary mt-section__col-link" title="Bekijk de case van {{ project.name }}">Bekijk meer van de case</a>
           </div>
         </div>
       </div>
