--- a/src/app/modules/index/components/case-row/case-row.component.html
+++ b/src/app/modules/index/components/case-row/case-row.component.html
@@ -15,20 +15,12 @@
       </div>
     </div>
     <div *ngIf="data" class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
-      <div *ngFor="let project of data.projects | slice:0:3;" class="mt-section__col col">
-        <div class="card">
-          <img class="mt-section__col-brand img-fluid" src="{{ (local_env == true ? 'http://localhost:1337' : '') + project.thumbnail.url }}" alt="random" [style]="{ 'background-color' : project.company.secondaryColor }">
-          <div class="card-body">
-            <div class="mt-section__col-copy">
-              <h5 class="mt-section__col-heading">{{ project.name }}</h5>
-              <p class="mt-section__col-content">{{ project.excerpt }}</p>
-            </div>
-          </div>
-          <div class="card-footer">
-            <a routerLink="/projects/{{ project.slug }}" class="mt-link text-tertiary mt-section__col-link" title="Bekijk de case van {{ project.name }}">Bekijk meer van de case</a>
-          </div>
-        </div>
-      </div>
+      <mt-case-card *ngFor="let projectData of data.projects | slice:0:3;" [project]="projectData"></mt-case-card>
+    </div>
+    <div *ngIf="loading" class="row row-cols-1 row-cols-lg-3 gy-4 gy-lg-0">
+      <mt-case-card-skeleton></mt-case-card-skeleton>
+      <mt-case-card-skeleton></mt-case-card-skeleton>
+      <mt-case-card-skeleton></mt-case-card-skeleton>
     </div>
   </div>
 </section>
